--- a/stage-1-html-css/day-1-semantics/style.css
+++ b/stage-1-html-css/day-1-semantics/style.css
@@ -27,3 +27,51 @@ section{
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
+.about_and_skills{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+}
+
+ul{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+li{
+    background: #e0e0e0;
+    padding: 5px 15px;
+    border-radius: 20px;
+    font-size: 0.9rem;
+}
+
+.menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.menu_tab{
+    margin: 15px;
+    cursor: pointer;
+
+}
+
+.header_button{
+    background-color: #947531;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.header_button:hover{
+    background-color: #7ab4a8;
+    color: black;
+}
